--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -46,11 +46,14 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="{% url 'home' %}">Home <span class="visually-hidden">(current)</span></a>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'anvil_project_manager:investigators:list' %}">AnVIL Users</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'about' %}">About</a>
+                <a class="nav-link" href="{% url 'anvil_project_manager:groups:list' %}">Groups</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'anvil_project_manager:workspaces:list' %}">Workspaces</a>
               </li>
             </ul>
           </div>
