Add links in templates to many-to-many model create views

--- a/anvil_project_manager/templates/anvil_project_manager/workspacegroupaccess_list.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspacegroupaccess_list.html
@@ -20,4 +20,6 @@
 
 </div>
 
+<p><a class="btn btn-secondary" href="{% url 'anvil_project_manager:workspace_group_access:new' %}" role="button">Give a group access to a workspace</a></p>
+
 {% endblock content %}
