--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -63,14 +63,14 @@
 
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Investigators
+                  Researchers
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                   <li>
-                    <a class="dropdown-item" href="{% url 'anvil_project_manager:investigators:list' %}">List investigators</a>
+                    <a class="dropdown-item" href="{% url 'anvil_project_manager:researchers:list' %}">List researchers</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="{% url 'anvil_project_manager:investigators:new' %}">Add an investigator</a>
+                    <a class="dropdown-item" href="{% url 'anvil_project_manager:researchers:new' %}">Add an researcher</a>
                   </li>
                 </ul>
               </li>
