--- a/anvil_project_manager/templates/anvil_project_manager/researcher_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/researcher_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}User: {{ object.username }}{% endblock %}
+{% block title %}Researcher: {{ object.username }}{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-sm-12">
 
-      <h2>User: {{ object.email }}</h2>
+      <h2>Researcher: {{ object.email }}</h2>
 
     </div>
   </div>
