--- a/anvil_project_manager/templates/anvil_project_manager/researcher_list.html
+++ b/anvil_project_manager/templates/anvil_project_manager/researcher_list.html
@@ -3,7 +3,7 @@
 
 {% load render_table from django_tables2 %}
 
-{% block title %}Investigators{% endblock %}
+{% block title %}Researchers{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col-sm-12">
 
-      <h2>Investigators</h2>
+      <h2>Researchers</h2>
 
       {% render_table table %}
 
