Change lingering investigator to researcher in template

--- a/anvil_project_manager/templates/anvil_project_manager/groupmembership_list.html
+++ b/anvil_project_manager/templates/anvil_project_manager/groupmembership_list.html
@@ -20,6 +20,6 @@
 
 </div>
 
-<p><a class="btn btn-secondary" href="{% url 'anvil_project_manager:group_membership:new' %}" role="button">Add an investigator to a group</a></p>
+<p><a class="btn btn-secondary" href="{% url 'anvil_project_manager:group_membership:new' %}" role="button">Add an researcher to a group</a></p>
 
 {% endblock content %}
