--- a/anvil_project_manager/templates/anvil_project_manager/researcher_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/researcher_detail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% load render_table from django_tables2 %}
+
 {% block title %}Researcher: {{ object.username }}{% endblock %}
 
 {% block content %}
@@ -10,6 +12,9 @@
     <div class="col-sm-12">
 
       <h2>Researcher: {{ object.email }}</h2>
+
+      <h3>Groups</h3>
+      {% render_table group_table %}
 
     </div>
   </div>
