--- a/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% load render_table from django_tables2 %}
+
 {% block title %}Workspace: {{ object.name }}{% endblock %}
 
 {% block content %}
@@ -9,7 +11,10 @@
   <div class="row">
     <div class="col-sm-12">
 
-      <h2>Group: {{ object.name }}</h2>
+      <h2>Workspace: {{ object.name }}</h2>
+
+      <h3>Groups</h3>
+      {% render_table group_table %}
 
     </div>
   </div>
