--- a/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
@@ -3,7 +3,7 @@
 
 {% load render_table from django_tables2 %}
 
-{% block title %}Workspace: {{ object.name }}{% endblock %}
+{% block title %}Workspace: {{ object }}{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col-sm-12">
 
-      <h2>Workspace: {{ object.name }}</h2>
+      <h2>Workspace: {{ object }}</h2>
 
       <h3>Groups</h3>
       {% render_table group_table %}
