Add a researchers table to GroupDetail

--- a/anvil_project_manager/templates/anvil_project_manager/group_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/group_detail.html
@@ -16,6 +16,9 @@
       <h3>Workspaces</h3>
       {% render_table workspace_table %}
 
+      <h3>Researchers</h3>
+      {% render_table researcher_table %}
+
     </div>
   </div>
 
