--- a/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% load render_table from django_tables2 %}
+
 {% block title %}Billing project: {{ object.name }}{% endblock %}
 
 {% block content %}
@@ -10,6 +12,9 @@
     <div class="col-sm-12">
 
       <h2>Billing project: {{ object.name }}</h2>
+
+      <h3>Workspaces</h3>
+      {% render_table workspace_table %}
 
     </div>
   </div>
