Remove url tag in delete template POST method
It is unnecessary, and having it there is more difficult to test.
It is easy to post to the wrong url (eg for the url for a different
model if you forget to change the namespaces in the url), and
harder to test.

--- a/anvil_project_manager/templates/anvil_project_manager/workspacegroupaccess_confirm_delete.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspacegroupaccess_confirm_delete.html
@@ -16,14 +16,11 @@
 
       <p>Are you sure you want to remove access to <a href="{{ object.workspace.get_absolute_url }}">{{ object.workspace }}</a> for <a href="{{ object.group.get_absolute_url }}">{{ object.group }}</a>?</p>
 
-      <form method="POST"
-      action="{% url 'anvil_project_manager:workspace_group_access:delete' pk=object.pk %}"
-      >
-        {% csrf_token %}
-        <input type="submit" class="btn btn-danger" value="Yes, remove"/>
-        <a href="{{ object.get_absolute_url }}"
-        class="btn btn-secondary" role="button">
-        No, cancel</a>
+      <form method="POST">{% csrf_token %}
+          {{ form }}
+          <input type="submit" class="btn btn-danger" value="Yes, remove"/>
+          <a href="{{ object.get_absolute_url }}" class="btn btn-secondary" role="button">
+          No, cancel</a>
       </form>
 
     </div>
