--- a/anvil_project_manager/templates/anvil_project_manager/researcher_confirm_delete.html
+++ b/anvil_project_manager/templates/anvil_project_manager/researcher_confirm_delete.html
@@ -16,14 +16,11 @@
 
       <p>Are you sure you want to remove <a href="{{ object.get_absolute_url }}">{{ object }}</a>?</p>
 
-      <form method="POST"
-      action="{% url 'anvil_project_manager:researchers:delete' pk=object.pk %}"
-      >
-        {% csrf_token %}
-        <input type="submit" class="btn btn-danger" value="Yes, remove"/>
-        <a href="{{ object.get_absolute_url }}"
-        class="btn btn-secondary" role="button">
-        No, cancel</a>
+      <form method="POST">{% csrf_token %}
+          {{ form }}
+          <input type="submit" class="btn btn-danger" value="Yes, remove"/>
+          <a href="{{ object.get_absolute_url }}" class="btn btn-secondary" role="button">
+          No, cancel</a>
       </form>
 
     </div>
