Add links to delete pages on detail pages

--- a/anvil_project_manager/templates/anvil_project_manager/group_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/group_detail.html
@@ -22,6 +22,8 @@
     </div>
   </div>
 
+  <a href="{% url 'anvil_project_manager:groups:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete</a>
+
 
 </div>
 {% endblock content %}
