--- a/anvil_project_manager/templates/anvil_project_manager/groupmembership_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/groupmembership_detail.html
@@ -20,6 +20,7 @@
     </div>
   </div>
 
+  <a href="{% url 'anvil_project_manager:group_membership:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete</a>
 
 </div>
 {% endblock content %}
