--- a/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
@@ -19,6 +19,8 @@
     </div>
   </div>
 
+  <a href="{% url 'anvil_project_manager:billing_projects:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete</a>
+
 
 </div>
 {% endblock content %}
