--- a/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
@@ -19,6 +19,7 @@
     </div>
   </div>
 
+  <a href="{% url 'anvil_project_manager:workspaces:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete</a>
 
 </div>
 {% endblock content %}
