--- a/anvil_project_manager/templates/anvil_project_manager/workspacegroupaccess_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspacegroupaccess_detail.html
@@ -20,6 +20,8 @@
     </div>
   </div>
 
+  <a href="{% url 'anvil_project_manager:workspace_group_access:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete</a>
+
 
 </div>
 {% endblock content %}
