Rename Researcher model to Account
This is a better name since it covers both Researchers (human users)
and service accounts.

--- a/anvil_project_manager/templates/anvil_project_manager/account_confirm_delete.html
+++ b/anvil_project_manager/templates/anvil_project_manager/account_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Remove Researcher{% endblock %}
+{% block title %}Remove Account{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -10,7 +10,7 @@
     <div class="col-sm-12">
 
 
-      <h2>Remove Researcher</h2>
+      <h2>Remove Account</h2>
 
       <h2>{{ object }}</h2>
 
