--- a/anvil_project_manager/templates/anvil_project_manager/group_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/group_detail.html
@@ -16,8 +16,8 @@
       <h3>Workspaces</h3>
       {% render_table workspace_table %}
 
-      <h3>Researchers</h3>
-      {% render_table researcher_table %}
+      <h3>Accounts</h3>
+      {% render_table account_table %}
 
     </div>
   </div>
