--- a/anvil_project_manager/templates/anvil_project_manager/groupmembership_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/groupmembership_detail.html
@@ -13,7 +13,7 @@
 
       <ul>
         <li>Group: <a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></li>
-        <li>Researcher: <a href="{{object.researcher.get_absolute_url}}"> {{ object.researcher}} </a></li>
+        <li>Account: <a href="{{object.account.get_absolute_url}}"> {{ object.account}} </a></li>
         <li>Role: {{ object.role }}</li>
       </ul>
 
