--- a/anvil_project_manager/templates/anvil_project_manager/account_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/account_detail.html
@@ -3,7 +3,7 @@
 
 {% load render_table from django_tables2 %}
 
-{% block title %}Researcher: {{ object.username }}{% endblock %}
+{% block title %}Account: {{ object.username }}{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col-sm-12">
 
-      <h2>Researcher: {{ object.email }}</h2>
+      <h2>Account: {{ object.email }}</h2>
 
       <h3>Groups</h3>
       {% render_table group_table %}
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-  <a href="{% url 'anvil_project_manager:researchers:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete</a>
+  <a href="{% url 'anvil_project_manager:accounts:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete</a>
 
 </div>
 {% endblock content %}
