--- a/anvil_project_manager/templates/anvil_project_manager/account_form.html
+++ b/anvil_project_manager/templates/anvil_project_manager/account_form.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}New Researcher{% endblock title %}
+{% block title %}New Account{% endblock title %}
 
 {% block content %}
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Save user</button>
+    <button type="submit" class="btn btn-success">Save account</button>
   </form>
 {% endblock %}
