--- a/anvil_project_manager/templates/anvil_project_manager/groupmembership_confirm_delete.html
+++ b/anvil_project_manager/templates/anvil_project_manager/groupmembership_confirm_delete.html
@@ -14,7 +14,7 @@
 
       <h2>{{ object }}</h2>
 
-      <p>Are you sure you want to remove <a href="{{ object.researcher.get_absolute_url }}">{{ object.researcher }}</a> from <a href="{{ object.group.get_absolute_url }}">{{ object.group }}</a>?</p>
+      <p>Are you sure you want to remove <a href="{{ object.account.get_absolute_url }}">{{ object.account }}</a> from <a href="{{ object.group.get_absolute_url }}">{{ object.group }}</a>?</p>
 
       <form method="POST">{% csrf_token %}
           {{ form }}
