--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -87,7 +87,7 @@
                     <a class="dropdown-item" href="{% url 'anvil_project_manager:groups:new' %}">Add a group</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="{% url 'anvil_project_manager:group_membership:list' %}">Group membership</a>
+                    <a class="dropdown-item" href="{% url 'anvil_project_manager:group_account_membership:list' %}">Group membership</a>
                   </li>
                 </ul>
               </li>
