Specify Group *Account* Membership in templates
This change is to differentiate bewteen Group-Group Membership,
which is being added in this branch, and Group-Account Membership,
which already exists.

--- a/anvil_project_manager/templates/anvil_project_manager/groupaccountmembership_confirm_delete.html
+++ b/anvil_project_manager/templates/anvil_project_manager/groupaccountmembership_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Remove Group Membership{% endblock %}
+{% block title %}Remove Group Account Membership{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -10,7 +10,7 @@
     <div class="col-sm-12">
 
 
-      <h2>Remove Group Membership</h2>
+      <h2>Remove Group Account Membership</h2>
 
       <h2>{{ object }}</h2>
 
