Modify workspace detail template to match group detail
Give more detail about the tables in a parallel way: Workspaces that
the group has access to, Groups that have access to this workspace

--- a/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
@@ -13,7 +13,7 @@
 
       <h2>Workspace: {{ object }}</h2>
 
-      <h3>Groups</h3>
+      <h3>Groups that have access to this workspace</h3>
       {% render_table group_table %}
 
     </div>
