Add a page to show AnVIL status
Add a view, tests for that view, and a template; these display the
AnVIL status to the user.

--- a/anvil_project_manager/templates/anvil_project_manager/status.html
+++ b/anvil_project_manager/templates/anvil_project_manager/status.html
@@ -7,4 +7,17 @@
 
 <h2>AnVIL Status</h2>
 
+<ul>
+  <li>Status:</li>
+  <code>{{ anvil_status }}</code>
+</ul>
+
+<h3>Systems</h3>
+
+<ul>
+  {% for system, value in anvil_systems_status.items %}
+    <li>{{ system }}</li>
+    <code>{{value}}</code>
+  {% endfor %}
+</ul>
 {% endblock content %}
