--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -47,6 +47,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
 
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'anvil_project_manager:status' %}">AnVIL status</a>
+              </li>
+
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Billing Projects
