Add a view to import a workspace from AnVIL
As part of this, add a form class and tests for it. This can't be
a model form because in some cases, we need to create the record for
the associated billing group, and in other cases it will exist. Add
tests for this form. Add tests, a template, and a url for the view.
Add a link to this view in the navbar.

--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -118,6 +118,9 @@
                     <a class="dropdown-item" href="{% url 'anvil_project_manager:workspaces:new' %}">Add a workspace</a>
                   </li>
                   <li>
+                    <a class="dropdown-item" href="{% url 'anvil_project_manager:workspaces:import' %}">Import a workspace from AnVIL</a>
+                  </li>
+                  <li>
                     <a class="dropdown-item" href="{% url 'anvil_project_manager:workspace_group_access:list' %}">Workspace access</a>
                   </li>
                 </ul>
