Show auth domain/workspace relationships on detail pages
Show the list of workspaces that group is the auth domain for on
that group's detail page, and show the list of groups that is the
auth domain for a workspace on the workspace detail page.

--- a/anvil_project_manager/templates/anvil_project_manager/group_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/group_detail.html
@@ -13,6 +13,9 @@
 
       <h2>Group: {{ object.name }}</h2>
 
+      <h3>Workspaces using this group as an authorization domain:</h3>
+      {% render_table workspace_authorization_domain_table %}
+
       <h3>Workspaces that this group has access to</h3>
       {% render_table workspace_table %}
 
