Change AccountCreate to AccountImport
We are not creating a user account on AnVIL, we're just importing
one (or at least, checking that it exists on AnVIL).

--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -74,7 +74,7 @@
                     <a class="dropdown-item" href="{% url 'anvil_project_manager:accounts:list' %}">List accounts</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="{% url 'anvil_project_manager:accounts:new' %}">Add an account</a>
+                    <a class="dropdown-item" href="{% url 'anvil_project_manager:accounts:import' %}">Import an account</a>
                   </li>
                 </ul>
               </li>
