Clarify in templates if you're deleting from the app or on AnVIL

--- a/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-  <a href="{% url 'anvil_project_manager:billing_projects:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete</a>
+  <a href="{% url 'anvil_project_manager:billing_projects:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete from app</a>
 
 
 </div>
