--- a/anvil_project_manager/templates/anvil_project_manager/group_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/group_detail.html
@@ -32,7 +32,7 @@
     </div>
   </div>
 
-  <a href="{% url 'anvil_project_manager:groups:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete</a>
+  <a href="{% url 'anvil_project_manager:groups:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
 
 
 </div>
