--- a/anvil_project_manager/templates/anvil_project_manager/account_confirm_delete.html
+++ b/anvil_project_manager/templates/anvil_project_manager/account_confirm_delete.html
@@ -14,7 +14,7 @@
 
       <h2>{{ object }}</h2>
 
-      <p>Are you sure you want to remove <a href="{{ object.get_absolute_url }}">{{ object }}</a>?</p>
+      <p>Are you sure you want to remove <a href="{{ object.get_absolute_url }}">{{ object }}</a> from this app?</p>
 
       <form method="POST">{% csrf_token %}
           {{ form }}
