--- a/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <a href="{% url 'anvil_project_manager:workspaces:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete</a>
+  <a href="{% url 'anvil_project_manager:workspaces:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
 
 </div>
 {% endblock content %}
