--- a/anvil_project_manager/templates/anvil_project_manager/workspacegroupaccess_confirm_delete.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspacegroupaccess_confirm_delete.html
@@ -14,7 +14,7 @@
 
       <h2>{{ object }}</h2>
 
-      <p>Are you sure you want to remove access to <a href="{{ object.workspace.get_absolute_url }}">{{ object.workspace }}</a> for <a href="{{ object.group.get_absolute_url }}">{{ object.group }}</a>?</p>
+      <p>Are you sure you want to remove access to <a href="{{ object.workspace.get_absolute_url }}">{{ object.workspace }}</a> for <a href="{{ object.group.get_absolute_url }}">{{ object.group }}</a> on AnVIL?</p>
 
       <form method="POST">{% csrf_token %}
           {{ form }}
