--- a/anvil_project_manager/templates/anvil_project_manager/workspacegroupaccess_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspacegroupaccess_detail.html
@@ -21,7 +21,7 @@
   </div>
 
   <a href="{% url 'anvil_project_manager:workspace_group_access:update' pk=object.pk %}" class="btn btn-secondary" role="button">Update Access</a>
-  <a href="{% url 'anvil_project_manager:workspace_group_access:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete</a>
+  <a href="{% url 'anvil_project_manager:workspace_group_access:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
 
 
 </div>
