Add a link to BillingProjectImport in the navbar

--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -59,6 +59,9 @@
                   <li>
                     <a class="dropdown-item" href="{% url 'anvil_project_manager:billing_projects:list' %}">List billing projects</a>
                   </li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'anvil_project_manager:billing_projects:import' %}">Import a billing project</a>
+                  </li>
                 </ul>
               </li>
 
