--- a/anvil_project_manager/templates/anvil_project_manager/account_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/account_detail.html
@@ -6,20 +6,33 @@
 {% block title %}Account: {{ object.username }}{% endblock %}
 
 {% block content %}
-<div class="container">
 
-  <div class="row">
-    <div class="col-sm-12">
-
-      <h2>Account: {{ object.email }}</h2>
-
-      <h3>Groups</h3>
-      {% render_table group_table %}
-
-    </div>
-  </div>
-
-  <a href="{% url 'anvil_project_manager:accounts:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete from app</a>
-
+<h2>Account Details</h2>
+<div class="my-3 p-3 bg-light border rounded shadow-sm">
+  <p>Email: {{ object.email }}</p>
 </div>
+
+<div class="my-3">
+  <div class="card">
+
+    <h4 class="card-header">Groups</h4>
+
+    <div class="card-body">
+        <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_group_table" aria-expanded="false" aria-controls="collapse_group_table">
+          See groups
+        </button>
+      <div class="p-3">
+        <div class="collapse" id="collapse_group_table">
+          {% render_table group_table %}
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<p>
+  <a href="{% url 'anvil_project_manager:accounts:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete from app</a>
+</p>
+
 {% endblock content %}
