--- a/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
@@ -6,18 +6,31 @@
 {% block title %}Billing project: {{ object.name }}{% endblock %}
 
 {% block content %}
-<div class="container">
 
-  <div class="row">
-    <div class="col-sm-12">
-
-      <h2>Billing project: {{ object.name }}</h2>
-
-      <h3>Workspaces</h3>
-      {% render_table workspace_table %}
-
-    </div>
-  </div>
-
+<h2>Billing Project Details</h2>
+<div class="my-3 p-3 bg-light border rounded shadow-sm">
+  <p>Name: {{ object.name }}</p>
 </div>
+
+<div class="my-3">
+  <div class="card">
+
+    <h4 class="card-header">Workspaces in this billing project</h4>
+
+    <div class="card-body">
+        <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_workspace_table" aria-expanded="false" aria-controls="collapse_workspace_table">
+          See {{ object.workspace_set.count }} workspace(s)
+        </button>
+      <div class="p-3">
+        <div class="collapse" id="collapse_workspace_table">
+          {% render_table workspace_table %}
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+
 {% endblock content %}
