--- a/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
@@ -6,23 +6,46 @@
 {% block title %}Workspace: {{ object }}{% endblock %}
 
 {% block content %}
-<div class="container">
 
-  <div class="row">
-    <div class="col-sm-12">
 
-      <h2>Workspace: {{ object }}</h2>
 
-      <h3>Authorization domains:</h3>
-      {% render_table authorization_domain_table %}
+<h2>Workspace Details</h2>
+<div class="my-3 p-3 bg-light border rounded shadow-sm">
+  <p>Workspace: {{ object }}</p>
+  <p>Billing project: {{ object.billing_project }}</p>
 
-      <h3>Groups that have access to this workspace</h3>
-      {% render_table group_access_table %}
-
+  <p>Authorization domains</p>
+  <div class="p-3">
+      <div class="card card-body">
+        {% render_table authorization_domain_table %}
     </div>
   </div>
 
-  <a href="{% url 'anvil_project_manager:workspaces:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
-
 </div>
+
+
+<div class="my-3">
+  <div class="card">
+
+    <h4 class="card-header">Groups with access</h4>
+
+    <div class="card-body">
+        <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_group_access_table" aria-expanded="false" aria-controls="collapse_group_access_table">
+          See groups
+        </button>
+      <div class="p-1">
+        <div class="collapse" id="collapse_group_access_table">
+          {% render_table group_access_table %}
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+<p>
+  <a href="{% url 'anvil_project_manager:workspaces:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
+</p>
+
 {% endblock content %}
