--- a/anvil_project_manager/templates/anvil_project_manager/account_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/account_detail.html
@@ -12,22 +12,21 @@
   <p>Email: {{ object.email }}</p>
 </div>
 
+
 <div class="my-3">
-  <div class="card">
-
-    <h4 class="card-header">Groups</h4>
-
-    <div class="card-body">
-        <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_group_table" aria-expanded="false" aria-controls="collapse_group_table">
-          See groups
+  <div class="accordion" id="accordionGroups">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingGroupsOne">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGroupsOne" aria-expanded="false" aria-controls="collapseGroupsOne">
+          View groups that this account is a member of
         </button>
-      <div class="p-3">
-        <div class="collapse" id="collapse_group_table">
+      </h2>
+      <div id="collapseGroupsOne" class="accordion-collapse collapse" aria-labelledby="headingGroupsOne" data-bs-parent="#accordionGroups">
+        <div class="accordion-body">
           {% render_table group_table %}
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
