--- a/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
@@ -13,24 +13,21 @@
 </div>
 
 <div class="my-3">
-  <div class="card">
-
-    <h4 class="card-header">Workspaces in this billing project</h4>
-
-    <div class="card-body">
-        <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_workspace_table" aria-expanded="false" aria-controls="collapse_workspace_table">
-          See {{ object.workspace_set.count }} workspace(s)
+  <div class="accordion" id="accordionWorkspaces">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingWorkspacesOne">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWorkspacesOne" aria-expanded="false" aria-controls="collapseWorkspacesOne">
+          View workspaces in this billing project
         </button>
-      <div class="p-3">
-        <div class="collapse" id="collapse_workspace_table">
+      </h2>
+      <div id="collapseWorkspacesOne" class="accordion-collapse collapse" aria-labelledby="headingWorkspacesOne" data-bs-parent="#accordionWorkspaces">
+        <div class="accordion-body">
           {% render_table workspace_table %}
         </div>
       </div>
     </div>
-
   </div>
 </div>
-
 
 
 {% endblock content %}
