--- a/anvil_project_manager/templates/anvil_project_manager/group_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/group_detail.html
@@ -15,55 +15,59 @@
 
 
 
+
 <div class="my-3">
-  <div class="card">
-
-    <h4 class="card-header">Workspaces that this group has access to</h4>
-
-    <div class="card-body">
-        <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_workspace_table" aria-expanded="false" aria-controls="collapse_workspace_table">
-          See groups
+  <div class="accordion" id="accordionWorkspaces">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingWorkspacesOne">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWorkspacesOne" aria-expanded="false" aria-controls="collapseWorkspacesOne">
+          View workspaces that this group has access to
         </button>
-      <div class="p-3">
-        <div class="collapse" id="collapse_workspace_table">
-            {% render_table workspace_table %}
+      </h2>
+      <div id="collapseWorkspacesOne" class="accordion-collapse collapse" aria-labelledby="headingWorkspacesOne" data-bs-parent="#accordionWorkspaces">
+        <div class="accordion-body">
+          {% render_table workspace_table %}
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
 
+
 <div class="my-3">
-  <div class="card">
+  <div class="accordion" id="accordionMembers">
 
-    <h4 class="card-header">Members of this group</h4>
-
-    <div class="card-body">
-
-      <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_group_table" aria-expanded="false" aria-controls="collapse_group_table">
-        See groups
-      </button>
-      <div class="p-3">
-        <div class="collapse" id="collapse_group_table">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingMembersOne">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMembersOne" aria-expanded="false" aria-controls="collapseMembersOne">
+          View group members
+        </button>
+      </h2>
+      <div id="collapseMembersOne" class="accordion-collapse collapse" aria-labelledby="headingMembersOne">
+        <div class="accordion-body">
           {% render_table group_table %}
         </div>
       </div>
+    </div>
 
-      <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_account_table" aria-expanded="false" aria-controls="collapse_account_table">
-        See accounts
-      </button>
-      <div class="p-3">
-        <div class="collapse" id="collapse_account_table">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingMembersTwo">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMembersTwo" aria-expanded="false" aria-controls="collapseMembersTwo">
+          View account members
+        </button>
+      </h2>
+      <div id="collapseMembersTwo" class="accordion-collapse collapse" aria-labelledby="headingMembersTwo">
+        <div class="accordion-body">
           {% render_table account_table %}
         </div>
       </div>
-
     </div>
 
   </div>
 </div>
+
+
 
 
 <p>
