--- a/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
@@ -16,30 +16,26 @@
 
   <p>Authorization domains</p>
   <div class="p-3">
-      <div class="card card-body">
         {% render_table authorization_domain_table %}
-    </div>
   </div>
 
 </div>
 
 
 <div class="my-3">
-  <div class="card">
-
-    <h4 class="card-header">Groups with access</h4>
-
-    <div class="card-body">
-        <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_group_access_table" aria-expanded="false" aria-controls="collapse_group_access_table">
-          See groups
+  <div class="accordion" id="accordionGroups">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingGroupsOne">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGroupsOne" aria-expanded="false" aria-controls="collapseGroupsOne">
+          View groups that have access
         </button>
-      <div class="p-1">
-        <div class="collapse" id="collapse_group_access_table">
+      </h2>
+      <div id="collapseGroupsOne" class="accordion-collapse collapse" aria-labelledby="headingGroupsOne" data-bs-parent="#accordionGroups">
+        <div class="accordion-body">
           {% render_table group_access_table %}
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
