--- a/anvil_project_manager/templates/anvil_project_manager/account_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/account_detail.html
@@ -10,6 +10,7 @@
 <h2>Account Details</h2>
 <div class="my-3 p-3 bg-light border rounded shadow-sm">
   <p>Email: {{ object.email }}</p>
+  <p>Is service account: {{ object.is_service_account }}</p>
 </div>
 
 
