--- a/anvil_project_manager/templates/anvil_project_manager/workspacegroupaccess_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspacegroupaccess_detail.html
@@ -4,25 +4,20 @@
 {% block title %}Workspace group access: {{ object }}{% endblock %}
 
 {% block content %}
-<div class="container">
 
-  <div class="row">
-    <div class="col-sm-12">
 
-      <h2>Workspace group access: {{ object }}</h2>
+<h2>Workspace Group Access details</h2>
+<div class="my-3 p-3 bg-light border rounded shadow-sm">
+  <ul>
+    <li>Group: <a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></li>
+    <li>Workspace: <a href="{{object.workspace.get_absolute_url}}"> {{ object.workspace}} </a></li>
+    <li>Access: {{ object.access }}</li>
+  </ul>
+</div>
 
-      <ul>
-        <li>Group: <a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></li>
-        <li>Workspace: <a href="{{object.workspace.get_absolute_url}}"> {{ object.workspace}} </a></li>
-        <li>Access: {{ object.access }}</li>
-      </ul>
-
-    </div>
-  </div>
-
+<p>
   <a href="{% url 'anvil_project_manager:workspace_group_access:update' pk=object.pk %}" class="btn btn-secondary" role="button">Update Access</a>
   <a href="{% url 'anvil_project_manager:workspace_group_access:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
+</p>
 
-
-</div>
 {% endblock content %}
