Use lists in detail boxes on detail pages
This isn't the prettiest, but it matches the many-to-many detail
pages. It can be changed later.

--- a/anvil_project_manager/templates/anvil_project_manager/account_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/account_detail.html
@@ -9,8 +9,10 @@
 
 <h2>Account Details</h2>
 <div class="my-3 p-3 bg-light border rounded shadow-sm">
-  <p>Email: {{ object.email }}</p>
-  <p>Is service account: {{ object.is_service_account }}</p>
+  <ul>
+    <li>Email: {{ object.email }}</li>
+    <li>Is service account: {{ object.is_service_account }}</li>
+  </ul>
 </div>
 
 
