--- a/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
@@ -9,7 +9,9 @@
 
 <h2>Billing Project Details</h2>
 <div class="my-3 p-3 bg-light border rounded shadow-sm">
-  <p>Name: {{ object.name }}</p>
+  <ul>
+    <li>Name: {{ object.name }}</li>
+  </ul>
 </div>
 
 <div class="my-3">
