--- a/anvil_project_manager/templates/anvil_project_manager/group_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/group_detail.html
@@ -9,8 +9,10 @@
 
 <h2>Group Details</h2>
 <div class="my-3 p-3 bg-light border rounded shadow-sm">
-  <p>Name: {{ object.name }}</p>
-  <p>Is managed by app? {{ object.is_managed_by_app }}</p>
+  <ul>
+    <li>Name: {{ object.name }}</li>
+    <li>Is managed by app? {{ object.is_managed_by_app }}</li>
+  </ul>
 </div>
 
 
