--- a/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
@@ -11,8 +11,10 @@
 
 <h2>Workspace Details</h2>
 <div class="my-3 p-3 bg-light border rounded shadow-sm">
-  <p>Workspace: {{ object }}</p>
-  <p>Billing project: {{ object.billing_project }}</p>
+  <ul>
+    <li>Workspace: {{ object }}</li>
+    <li>Billing project: {{ object.billing_project }}</li>
+  </ul>
 </div>
 
 <div class="card">
