--- a/anvil_project_manager/templates/anvil_project_manager/account_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/account_detail.html
@@ -22,6 +22,7 @@
       <h2 class="accordion-header" id="headingGroupsOne">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGroupsOne" aria-expanded="false" aria-controls="collapseGroupsOne">
           View groups that this account is a member of
+          <span class="badge mx-2 bg-secondary pill"> {{ group_table.rows|length }}</span>
         </button>
       </h2>
       <div id="collapseGroupsOne" class="accordion-collapse collapse" aria-labelledby="headingGroupsOne" data-bs-parent="#accordionGroups">
