--- a/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
@@ -20,6 +20,7 @@
       <h2 class="accordion-header" id="headingWorkspacesOne">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWorkspacesOne" aria-expanded="false" aria-controls="collapseWorkspacesOne">
           View workspaces in this billing project
+          <span class="badge mx-2 bg-secondary pill"> {{ workspace_table.rows|length }}</span>
         </button>
       </h2>
       <div id="collapseWorkspacesOne" class="accordion-collapse collapse" aria-labelledby="headingWorkspacesOne" data-bs-parent="#accordionWorkspaces">
