Use Font Awesome icons
Install the Django package for Font Awesome, and add it to the
requirements. Use icons in the detail pages where appropriate.

--- a/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/billingproject_detail.html
@@ -19,6 +19,7 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingWorkspacesOne">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWorkspacesOne" aria-expanded="false" aria-controls="collapseWorkspacesOne">
+          <span class="fa-solid fa-computer mx-2"></span>
           View workspaces in this billing project
           <span class="badge mx-2 bg-secondary pill"> {{ workspace_table.rows|length }}</span>
         </button>
