--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -30,6 +30,9 @@
       <!-- place project specific Javascript in this file -->
       <script defer src="{% static 'js/project.js' %}"></script>
 
+      <!-- font awesome icons -->
+      <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
+
     {% endblock javascript %}
 
   </head>
