--- a/anvil_project_manager/templates/anvil_project_manager/account_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/account_detail.html
@@ -21,6 +21,7 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingGroupsOne">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGroupsOne" aria-expanded="false" aria-controls="collapseGroupsOne">
+          <span class="fa-solid fa-user-group mx-2"></span>
           View groups that this account is a member of
           <span class="badge mx-2 bg-secondary pill"> {{ group_table.rows|length }}</span>
         </button>
