--- a/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/workspace_detail.html
@@ -19,6 +19,7 @@
 
 <div class="card">
   <div class="card-header">
+    <span class="fa-solid fa-shield mx-2"></span>
     Authorization domains
   </div>
   <div class="card-body">
@@ -31,6 +32,7 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingGroupsOne">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGroupsOne" aria-expanded="false" aria-controls="collapseGroupsOne">
+          <span class="fa-solid fa-user-group mx-2"></span>
           View groups that have access
           <span class="badge mx-2 bg-secondary pill"> {{ group_access_table.rows|length }}</span>
         </button>
